# vanicall

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FRONTEND.md  README.md  fly.toml  schema.sql
src/: main.rs
